Made language button functional, needs GUI fixes still

--- a/src/gui/welcomescreen/SettingsButtonStyle.css
+++ b/src/gui/welcomescreen/SettingsButtonStyle.css
@@ -6,18 +6,17 @@
     -fx-border-width: 2;
     -fx-border-color: #47BDFF;
     -fx-background-insets: 1px;
+    -fx-background-color: transparent;
 }
-:link {
-	-fx-background-color: transparent;
-}
-:visited {
+
+.toggle-button:visited {
 	-fx-background-color: 
         linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
         #9d4024,
         #d86e3a,
         radial-gradient(center 50% 50%, radius 100%, #ea7f4b, #c54e2c);
 }
-:hover {
+.toggle-button:hover {
 	
     -fx-background-color: 
         linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
@@ -25,14 +24,14 @@
         #d86e3a,
         radial-gradient(center 50% 50%, radius 100%, #ea7f4b, #c54e2c);
 }
-:active {
+.toggle-button:active {
     -fx-background-color: 
         linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
         #9d4024,
         #d86e3a,
         radial-gradient(center 50% 50%, radius 100%, #ea7f4b, #c54e2c);
 }
-:selected {
+.toggle-button:selected {
 	 -fx-background-color: 
         linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
         #9d4024,
