Cleaned game list styling

--- a/src/gui/welcomescreen/MenuOptionsStyle.css
+++ b/src/gui/welcomescreen/MenuOptionsStyle.css
@@ -32,3 +32,9 @@
     -fx-background-color: #47BDFF;
 }
 
+.label {
+	-fx-text-fill: #98A7F1;
+    -fx-font-family: "Segoe UI";
+    -fx-font-size: 60;
+}
+
