--- a/src/gui/welcomescreen/SettingsButtonStyle.css
+++ b/src/gui/welcomescreen/SettingsButtonStyle.css
@@ -1,27 +1,27 @@
 .toggle-button {
 	-fx-font-size: 30px;
 	-fx-font-family: Segoe UI;
-	-fx-text-fill: #ea7f4b;
+	-fx-text-fill: #47BDFF;
 	-fx-border-style: solid inside;
     -fx-border-width: 2;
-    -fx-border-color: #ea7f4b;
+    -fx-border-color: #47BDFF;
     -fx-background-insets: 1px;
     -fx-background-color: transparent;
 }
 
 .toggle-button:visited {
 	-fx-background-color: 
-        #64290c;
+        #ea7f4b;
 }
 .toggle-button:hover {
     -fx-background-color: 
-        #64290c;
+        #ea7f4b;
 }
 .toggle-button:active {
     -fx-background-color: 
-        #64290c;
+        #ea7f4b;
 }
 .toggle-button:selected {
 	 -fx-background-color: 
-        #64290c;
+        #ea7f4b;
 }
