--- a/src/authoring_UI/ViewMenu.css
+++ b/src/authoring_UI/ViewMenu.css
@@ -1,5 +1,11 @@
+#sideBar {
+    -fx-background-color: #001E32;
+}
+
 .toggle-button {
-	-fx-font-size: 30px;
+    -fx-font-size: 20px;
+    -fx-pref-height: 30;
+    -fx-pref-width: 200;
 	-fx-font-family: Segoe UI;
 	-fx-text-fill: #47BDFF;
 	-fx-border-style: solid inside;
@@ -24,5 +30,4 @@
 .toggle-button:selected {
 	 -fx-background-color: 
         #FFCD3C;
-
 }
