Added error checking for creating a new project

--- a/src/authoring_UI/Authoring.css
+++ b/src/authoring_UI/Authoring.css
@@ -153,6 +153,10 @@
     -fx-background-color: #47BDFF;
 }
 
+#StackPane:hover{
+	-fx-border-color: #47BDFF;
+}
+
 .separator{
 	-fx-background: #47BDFF;
 }
