Full background load and gif support.

--- a/src/authoring_UI/Authoring.css
+++ b/src/authoring_UI/Authoring.css
@@ -2,6 +2,10 @@
     blue-color: #47BDFF;
 }
 
+.color-picker{
+	-fx-color-label-visible: false;
+}
+
 .tool-bar {
 	-fx-background-color: #001E32;
 }
