#16 Redid styling of utilities, fixed number spinners to have uneditable text field, error checked for sprite deletion, selecting files in main view and terrain, and background setting for other views

--- a/src/authoring_UI/Authoring.css
+++ b/src/authoring_UI/Authoring.css
@@ -4,6 +4,17 @@
 
 .color-picker{
 	-fx-color-label-visible: false;
+	-fx-background-color: transparent;
+	-fx-border-color: #47BDFF;
+}
+
+.color-picker:hover {
+	-fx-background-color: #FFCD3C;
+	-fx-background-insets: 0 0 0.5px 0;
+}
+
+.color-picker > .arrow-button > .arrow {
+    -fx-background-color: #47BDFF;
 }
 
 .tool-bar {
@@ -41,7 +52,7 @@
 }
 
 .scroll-pane > .corner {
-      -fx-background-color: transparent;
+     -fx-background-color: transparent;
 }
 
 .scroll-pane {
@@ -141,6 +152,17 @@
 .text-area{
 	-fx-border-color: #47BDFF;
 	-fx-background-color: transparent;
+	-fx-text-fill: #47BDFF;
+}
+
+.text-field{
+	-fx-border-color: #47BDFF;
+	-fx-background-color: transparent;
+	-fx-text-fill: #47BDFF;
+}
+
+.check-box {
+	-fx-text-fill: #47BDFF;
 }
 
 .check-box .box {
