--- a/src/authoring_UI/dialogue/dialogue.css
+++ b/src/authoring_UI/dialogue/dialogue.css
@@ -1,4 +1,8 @@
 
-.label {
-	-fx-text-fill: white;
+.text-area{
+	-fx-border-color:blue;
+}
+
+.text-area .scroll-bar:vertical:disabled {
+    -fx-opacity: 0;
 }
